...
    <string name="about">About</string>
    <string name="add_folder">Add folder</string>
    <string name="add_item">Add item</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copy_password">Copy password</string>
    <string name="copy_username">Copy username</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="deleting">Deleting…</string>
...
    <string name="remove_account_confirmation">Are you sure you want to remove this account?</string>
    <string name="account_already_added">Account already added</string>
    <string name="switch_to_already_added_account_confirmation">Would you like to switch to it now?</string>
    <string name="master_password">Master password</string>
    <string name="master_password_required">Master password (required)</string>
    <string name="new_master_password_required">New master password (required)</string>
    <string name="more_options">More options</string>
    <string name="my_folder">My folder</string>
    <string name="my_folders">My folders</string>
    <string name="my_vault">My vault</string>
    <string name="name">Name</string>
    <string name="item_name_required">Item name (required)</string>
    <string name="send_name_required">Send name (required)</string>
...
    <string name="username">Username</string>
    <string name="validation_field_required">The %1$s field is required.</string>
    <string name="you_must_attach_a_file_to_save_this_send">You must attach a file to save this send.</string>
    <string name="value_has_been_copied">%1$s copied</string>
    <string name="verify_master_password">Verify master password</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="account">Account</string>
    <string name="account_created_success">Your new account has been created!</string>
    <string name="set_bitwarden_as_passkey_manager_description">Set Bitwarden as your passkey provider in device settings.</string>
    <string name="avoid_ambiguous_characters">Avoid ambiguous characters</string>
    <string name="bitwarden_autofill_service">Bitwarden Autofill Service</string>
...
    <string name="items_for_uri">Items for %1$s</string>
    <string name="no_items_for_uri">There are no items in your vault for %1$s.</string>
    <string name="no_items_for_vault">There are no items in your vault that match “%1$s”</string>
    <string name="search_for_a_login_or_add_a_new_login">Search for a login or add a new login</string>
    <string name="disabled">Disabled</string>
    <string name="bitwarden_autofill_service_alert2">The easiest way to add new logins to your vault is from the Bitwarden Autofill Service. Learn more about using the Bitwarden Autofill Service by navigating to the “Settings” screen.</string>
    <string name="autofill_noun">Autofill</string>
    <string name="autofill_verb">Autofill</string>
    <string name="autofill_or_view">Do you want to autofill or view this item?</string>
    <string name="search_x" comment="%1$s is a placeholder for the type of item being searched for (e.g. Logins).">Search %1$s</string>
    <string name="learn_org">Learn about organizations</string>
    <string name="authenticator_app_title">Authenticator app</string>
    <string name="enter_verification_code_app">Enter the 6 digit verification code from your authenticator app.</string>
    <string name="enter_verification_code_email">Enter the 6 digit verification code that was emailed to %1$s.</string>
    <string name="enter_verification_code_new_device">We don’t recognize this device. Enter the code sent to your email to verify your identity.</string>
...
    <string name="exact">Exact</string>
    <string name="host">Host</string>
    <string name="reg_ex">Regular expression</string>
    <string name="starts_with">Starts with</string>
    <string name="uri_match_detection">URI match detection</string>
    <string name="match_detection">Match detection</string>
    <string name="autofill_and_save">Autofill and save</string>
    <string name="organization">Organization</string>
    <string name="try_again">Try again</string>
    <string name="created">Created: %1$s</string>
    <string name="password_updated">Password updated: %1$s</string>
    <string name="last_edited">Last edited: %1$s</string>
    <string name="invalid_email">Invalid email address.</string>
...
